changing config dev and prod

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -33,7 +33,5 @@ monolog:
 #swiftmailer:
 #    delivery_address: me@example.com
 
-doctrine_cache:
-    providers:
-        my_markdown_cache:
-            type: array
+parameters:
+    cache_type: array
