--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.0",
+        "nelmio/alice": "2.1.4"
     },
     "scripts": {
         "post-install-cmd": [
