--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,4 +12,4 @@ services:
         class: AppBundle\Twig\MarkdownExtension
         tags:
             - { name: twig.extension }
-        arguments: ['@app.markdown_transformer']
+        autowire: true
