--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,7 +38,9 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     number_format:
-      thousands_separator: ','
+        thousands_separator: ','
+    form_themes:
+        - bootstrap_3_layout.html.twig
 
 # Doctrine Configuration
 doctrine:
