--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -13,3 +13,7 @@ services:
         tags:
             - { name: twig.extension }
         autowire: true
+
+    app.security.login_form_authenticator:
+        class: AppBundle\Security\LoginFormAuthenticator
+        autowire: true
