--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,25 +1,24 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
+imports:
+    - { resource: legacy_aliases.yml }
+
 parameters:
 #    parameter_name: value
 
 services:
-    app.markdown_transformer:
-        class: AppBundle\Service\MarkdownTransformer
+    _defaults:
+        autowire: true
+        autoconfigure: true
+        public: false
+
+    AppBundle\Service\MarkdownTransformer:
         arguments: ['@markdown.parser','@doctrine_cache.providers.my_markdown_cache']
 
-    app.markdown_extension:
-        class: AppBundle\Twig\MarkdownExtension
-        tags:
-            - { name: twig.extension }
-        autowire: true
+    AppBundle\Twig\MarkdownExtension:
 
-    app.security.login_form_authenticator:
-        class: AppBundle\Security\LoginFormAuthenticator
-        autowire: true
+    AppBundle\Security\LoginFormAuthenticator: ~
 
-    app.doctrine.hash_password_listener:
-        class: AppBundle\Doctrine\HashPasswordListener
-        autowire: true
+    AppBundle\Doctrine\HashPasswordListener:
         tags:
             - { name: doctrine.event_subscriber }
