--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -22,3 +22,9 @@ services:
     AppBundle\Doctrine\HashPasswordListener:
         tags:
             - { name: doctrine.event_subscriber }
+
+    app.form.help_form_extension:
+        class: AppBundle\Form\TypeExtension\HelpFormExtension
+        autowire: true
+        tags:
+        - { name: form.type_extension, extended_type: 'Symfony\Component\Form\Extension\Core\Type\FormType' }
