--- a/app/config/legacy_aliases.yml
+++ b/app/config/legacy_aliases.yml
@@ -3,3 +3,4 @@ services:
     app.markdown_extension: '@AppBundle\Twig\MarkdownExtension'
     app.security.login_form_authenticator: '@AppBundle\Security\LoginFormAuthenticator'
     app.doctrine.hash_password_listener: '@AppBundle\Doctrine\HashPasswordListener'
+    app.form.help_form_extension: '@AppBundle\Form\TypeExtension\HelpFormExtension'
