--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -23,8 +23,16 @@ services:
         tags:
             - { name: doctrine.event_subscriber }
 
-    app.form.help_form_extension:
-        class: AppBundle\Form\TypeExtension\HelpFormExtension
-        autowire: true
+    AppBundle\Form\TypeExtension\HelpFormExtension:
         tags:
         - { name: form.type_extension, extended_type: 'Symfony\Component\Form\Extension\Core\Type\FormType' }
+
+    app.encouraging_message_generator:
+        class: AppBundle\Service\MessageGenerator
+        arguments:
+            - ['You can do it!', 'Dude, sweet!', 'Woot!']
+
+    app.discouraging_message_generator:
+        class: AppBundle\Service\MessageGenerator
+        arguments:
+            - ['We are *never* going to figure this out', 'Why even try again?', 'Facepalm']
