--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -31,8 +31,10 @@ services:
         class: AppBundle\Service\MessageGenerator
         arguments:
             - ['You can do it!', 'Dude, sweet!', 'Woot!']
+        public: true
 
     app.discouraging_message_generator:
         class: AppBundle\Service\MessageGenerator
         arguments:
             - ['We are *never* going to figure this out', 'Why even try again?', 'Facepalm']
+        public: true
