--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,6 +12,12 @@ services:
         autoconfigure: true
         public: false
 
+    AppBundle\:
+        resource: '../../src/AppBundle/*'
+        # you can exclude directories or files
+        # but if a service is unused, it's removed anyway
+        exclude: '../../src/AppBundle/{Entity,Repository}'
+
     AppBundle\Service\MarkdownTransformer:
         arguments: ['@markdown.parser','@doctrine_cache.providers.my_markdown_cache']
 
