--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -18,12 +18,13 @@ services:
         # but if a service is unused, it's removed anyway
         exclude: '../../src/AppBundle/{Entity,Repository}'
 
+    AppBundle\Controller\:
+        resource: '../../src/AppBundle/Controller'
+        public: true
+        tags: ['controller.service_arguments']
+
     AppBundle\Service\MarkdownTransformer:
         arguments: ['@markdown.parser','@doctrine_cache.providers.my_markdown_cache']
-
-    AppBundle\Twig\MarkdownExtension:
-
-    AppBundle\Security\LoginFormAuthenticator: ~
 
     AppBundle\Doctrine\HashPasswordListener:
         tags:
