--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,8 +20,10 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    Knp\Bundle\MarkdownBundle\MarkdownParserInterface: '@markdown.parser'
+
     AppBundle\Service\MarkdownTransformer:
-        arguments: ['@markdown.parser','@doctrine_cache.providers.my_markdown_cache']
+        arguments: ['','@doctrine_cache.providers.my_markdown_cache']
 
     AppBundle\Twig\MarkdownExtension:
 
