--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "knplabs/knp-markdown-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.3",
-        "stof/doctrine-extensions-bundle": "dev-master"
+        "stof/doctrine-extensions-bundle": "dev-master",
+        "symfony/flex": "^1.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.0",
@@ -61,6 +62,9 @@
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
-        "branch-alias": null
+        "branch-alias": null,
+        "symfony": {
+            "allow-contrib": true
+        }
     }
 }
