--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "knplabs/knp-markdown-bundle": "^1.4",
         "sensio/framework-extra-bundle": "^3.0.2",
         "stof/doctrine-extensions-bundle": "dev-master",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
@@ -31,8 +32,10 @@
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/security-csrf": "^4.0",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "^4.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
         "symfony/yaml": "^4.0"
     },
