--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
         "psr-4": {
             "AppBundle\\": "src/AppBundle",
             "App\\": "src/"
-        },
-        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
@@ -24,6 +23,7 @@
         "knplabs/knp-markdown-bundle": "^1.4",
         "sensio/framework-extra-bundle": "^3.0.2",
         "stof/doctrine-extensions-bundle": "dev-master",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
