--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.1",
         "doctrine/orm": "^2.5",
+        "fzaninotto/faker": "^1.7",
         "knplabs/knp-markdown-bundle": "^1.4",
         "sensio/framework-extra-bundle": "^5.0",
         "stof/doctrine-extensions-bundle": "dev-master",
@@ -28,6 +29,7 @@
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/maker-bundle": "^1.4",
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/profiler-pack": "^1.0",
@@ -43,7 +45,7 @@
     "require-dev": {
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "doctrine/doctrine-fixtures-bundle": "^3.0"
     },
     "config": {
         "preferred-install": {
